# claude-pet

./: .gitignore  CLAUDE.md  FEATURES_FOR_REVIEW.md  LICENSE  NOTICE  README.ko.md  README.md  REVIEW-2026-07-11-followup.md  TODO.md  install.py  pyproject.toml
docs/: platform.ko.md  platform.md  usage.ko.md  usage.md
docs/superpowers/plans/: 2026-07-09-hook-state-policy.md  2026-07-10-pet-motion-command.md
docs/superpowers/specs/: 2026-07-09-claude-pet-design.md  2026-07-09-system-tray.md
packaging/: claude-pet.desktop
scripts/: release.sh
skills/claude-pet/: SKILL.md
src/: creature.py  hostinfo.py  macos_geom.py  pet.py  petconfig.py  physics.py  state_engine.py  windows.py  windows_win32.py
src/claude_pet/: attach.py
src/claudlet/: __init__.py  attach.py  configcli.py  hook.py  install.py  motion.py  pet.py  uninstall.py  windows_macos.py
tests/: test_attach.py  test_autopilot_state.py  test_creature_render.py  test_geom_macos_notch.py  test_hook_claude_pid.py  test_hook_payload.py  test_hostinfo.py  test_macos_geom.py  test_motion_helper.py  test_pet_smoke.py  test_petconfig.py  test_physics.py  test_state_engine.py  test_windows.py  test_windows_win32.py
tests/integration/: harness.py  test_hook_claude_pid.py  test_pet_smoke.py
tests/platform/: test_geom_macos.py  test_geom_win32.py
tests/unit/: test_asking_state.py  test_autopilot_state.py  test_creature_render.py  test_geom.py  test_hostinfo.py  test_idle_engine.py  test_petconfig.py  test_petting.py  test_physics.py  test_qdbus.py  test_relnotes.py  test_state_engine.py  test_tray_icon.py
(+19 files in other folders)
